# rusty-chip8

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json
emulator/: main.rs
emulator/chip8/: cpu.rs  font.rs
emulator/drivers/: keyboard_driver.rs  sound_driver.rs
emulator/gui/windows/: base_window.rs
src/: App.js  build.rs  main.rs
src/chip8/: chip8.rs  cpu.rs  op_code.rs  op_code_variable_util.rs
src/debug/: debugger.rs
src/drivers/: graphics_driver.rs  keyboard_driver.rs  rom_driver.rs  sound_driver.rs
src/gui/windows/: base_window.rs  main_window.slint
