[package]
name = "rusty-chip8"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sdl2 = "0.36"
slint = "1.7.2"
native-dialog = "0.7.0"

[build-dependencies]
slint-build = "1.7.2"
